--- a/buttonclick.html
+++ b/buttonclick.html
@@ -32,7 +32,7 @@
         background-color: #f0f2f5;
       }
 
-      .modal-overlay {
+      .modaldesign {
         display: none;
         position: fixed;
         top: 0;
@@ -228,7 +228,7 @@
       <a href="#" class="logo">🎮 ButtonClick</a>
     </div>
 
-    <div class="modal-overlay" id="modalOverlay">
+    <div class="modaldesign" id="modalOverlay">
       <div class="modal">
         <h2>Game Over!</h2>
         <div class="modal-content">
